--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br><input type="text" maxlenght="20" value="Почта или телефон"> 
 <br>Пароль 
 <br><input type="password" maxlenght="20" value="Пароль"> 
-<br><input type="button" value="Вход"><form action="https:pavelbuklin2.github.io/pavel/registration"><button>Регистрация</button></form> 
+<br><input type="button" value="Вход"><form action="https:pavelbuklin2.github.io/pavel/registration.html"><button>Регистрация</button></form> 
 </td> 
 <td width="80%"><br><b>Земляные черви</b> (лат. Vérmes)  (лат. Lumbricina), — подотряд малощетинковых червей из отряда Crassiclitellata[2]. Обитают на всех континентах, кроме Антарктиды, однако лишь немногие виды изначально имели широкий ареал: распространение ряда представителей произошло за счёт интродукции человеком[3]. Наиболее известные европейские земляные черви относятся к семейству Lumbricidae.
 <br><u>Строение</u> 
