--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <style>
-p {text-shadow: 3px 2px 1px yellow, 0 1 1em blue; color: green; font-size: 1em;}     
+p {text-shadow: 3px 2px 1px #FFC0CB, 0 1 1em ; color: #00FF00; font-size: 1em;}     
 <title>Страница о червях</title> 
 </style>
 </head> 
