--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html> 
 <head>
 <style>
-p {text-shadow: 3px 2px 1px #FFC0CB; color: #00FF00; font-size: 1em;}     
+p {text-shadow: 1px 1px 2px black, 0 0 1em red;
+   color: white;
+  font-size: 2em;}     
 <title>Страница о червях</title> 
 </style>
 </head> 
