--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-﻿<!DOCTYPE html> 
+<!DOCTYPE html> 
 <html> 
 <head>
 <style>
-p {text-shadow: 1px 1px 1px black, 0 0 1em red;
-   color: white;
-  font-size: 1em;}     
+table {background: url(worms_PNG27.png) repeat white;}
+h1{color: #a52a2a;
+font-size: 1em;
+border-bottom-style: solid;}
+p {text-shadow: 1px 3px 2px black, 0 0 1em blue;
+   color: yellow;
+  font-size: 1em;}
+u {text-shadow: 1px 1px 1px black, 0 0 1em pink;
+   color: green;
+  font-size: 1em;}
+b {text-decoration: overline; font-family: cursive;}     
 <title>Страница о червях</title> 
 </style>
 </head> 
@@ -27,12 +35,12 @@ p {text-shadow: 1px 1px 1px black, 0 0 1em red;
 </td> 
 <td width="80%"><br><b>Земляные черви</b> (лат. Vérmes)  (лат. Lumbricina), — подотряд малощетинковых червей из отряда Crassiclitellata[2]. Обитают на всех континентах, кроме Антарктиды, однако лишь немногие виды изначально имели широкий ареал: распространение ряда представителей произошло за счёт интродукции человеком[3]. Наиболее известные европейские земляные черви относятся к семейству Lumbricidae.
 <br><u>Строение</u> 
-<br>Длина тела представителей разных видов варьирует от 2 см (род Dichogaster) до 3 м (Megascolides australis)[3]. Число сегментов также изменчиво: от 80 до 300[1]. При передвижении дождевые черви опираются на короткие щетинки, расположенные на каждом сегменте, кроме переднего. Число щетинок изменяется от 8 до нескольких десятков (у некоторых тропических видов).Кровеносная система у червей замкнутая, достаточно хорошо развита, кровь имеет красный цвет. У дождевого червя два главных кровеносных сосуда: спинной, по которому кровь движется от задней части тела к передней, и брюшной, в котором кровь движется от передней части тела к задней. Эти два сосуда связаны кольцевыми сосудами в каждом членике, некоторые из них, называемые «сердцами», могут сокращаться, обеспечивая движение крови. Сосуды разветвляются на мелкие капилляры[4]. Дыхание осуществляется через богатую чувствительными клетками кожу, которая покрыта защитной слизью. Слизь насыщена колоссальным количеством ферментов, которые являются антисептиками. Нервная система дождевых червей состоит из слабо развитого головного мозга (два нервных узла) и брюшной цепочки. Имеют развитую способность к регенерации.
-<br><u>Экология</u> 
+<br><u>Длина тела представителей разных видов варьирует от 2 см (род Dichogaster) до 3 м (Megascolides australis)[3]. Число сегментов также изменчиво: от 80 до 300[1]. При передвижении дождевые черви опираются на короткие щетинки, расположенные на каждом сегменте, кроме переднего. Число щетинок изменяется от 8 до нескольких десятков (у некоторых тропических видов).Кровеносная система у червей замкнутая, достаточно хорошо развита, кровь имеет красный цвет. У дождевого червя два главных кровеносных сосуда: спинной, по которому кровь движется от задней части тела к передней, и брюшной, в котором кровь движется от передней части тела к задней. Эти два сосуда связаны кольцевыми сосудами в каждом членике, некоторые из них, называемые «сердцами», могут сокращаться, обеспечивая движение крови. Сосуды разветвляются на мелкие капилляры[4]. Дыхание осуществляется через богатую чувствительными клетками кожу, которая покрыта защитной слизью. Слизь насыщена колоссальным количеством ферментов, которые являются антисептиками. Нервная система дождевых червей состоит из слабо развитого головного мозга (два нервных узла) и брюшной цепочки. Имеют развитую способность к регенерации.</u>
+<br><p>Экология</p>
 <p>На значение дождевых червей в процессе образования почвы одним из первых указал Чарльз Дарвин в 1882 году[6]. Земляные черви создают норки в почве (глубиной не менее 60—80 см, крупные виды — до 8 м), способствуя её аэрации, увлажнению и перемешиванию. Черви продвигаются через почву, расталкивая частицы или заглатывая их. Во время дождя земляные черви выходят на поверхность, так как они имеют кожное дыхание и начинают страдать от недостатка кислорода в переувлажненной почве.
 Дождевые черви являются промежуточными хозяевами лёгочных гельминтов свиней и некоторых паразитов птиц.Во время последнего оледенения местные виды дождевых червей Северной Америки исчезли с большей территории. После ухода ледника они не смогли восстановить популяцию. Однако с колонизацией Америки и промышленным разведением европейских дождевых червей они стали активно осваивать канадскую и американскую территорию.</p>
-<br><u>Значение для человека</u> 
-<br>В Западной Европе вымытых дождевых червей или порошок из высушенных червей клали на раны для их заживления, при туберкулёзе и раке применялась настойка на порошке, отваром лечили боль в ушах, червями, сваренными в вине — желтуху, настоянным на червях маслом — боролись с ревматизмом. Немецкий врач Шталь (1734) назначал порошок из высушенных червей при эпилепсии. Порошок использовался и в китайской традиционной медицине в составе снадобья для избавления от атеросклероза. А в русской народной медицине жидкость, истёкшую от посоленных и разогретых дождевых червей, закапывали в глаза при катаракте.Крупные виды дождевых червей употребляются в пищу австралийскими аборигенами и некоторыми народами Африки.Небольшие особи используются как живая наживка в любительской рыбалке.В Японии считалось, что если помочиться на дождевого червя, то из-за этого может распухнуть причинное место.
+<br><h1>Значение для человека</h1>
+<br><h1>В Западной Европе вымытых дождевых червей или порошок из высушенных червей клали на раны для их заживления, при туберкулёзе и раке применялась настойка на порошке, отваром лечили боль в ушах, червями, сваренными в вине — желтуху, настоянным на червях маслом — боролись с ревматизмом. Немецкий врач Шталь (1734) назначал порошок из высушенных червей при эпилепсии. Порошок использовался и в китайской традиционной медицине в составе снадобья для избавления от атеросклероза. А в русской народной медицине жидкость, истёкшую от посоленных и разогретых дождевых червей, закапывали в глаза при катаракте.Крупные виды дождевых червей употребляются в пищу австралийскими аборигенами и некоторыми народами Африки.Небольшие особи используются как живая наживка в любительской рыбалке.В Японии считалось, что если помочиться на дождевого червя, то из-за этого может распухнуть причинное место.</h1>
 </td> 
 </tr> 
 </table> 
