--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html> 
 <head>
 <style>
-table {background: url(worms_PNG27.png) repeat white;}
+table {background: url(gaga.png) repeat purple;
+background-size: cover;
+}
 h1{color: #a52a2a;
 font-size: 1em;
 border-bottom-style: solid;}
@@ -12,18 +14,20 @@ p {text-shadow: 1px 3px 2px black, 0 0 1em blue;
 u {text-shadow: 1px 1px 1px black, 0 0 1em pink;
    color: green;
   font-size: 1em;}
-b {text-decoration: overline; font-family: cursive;}     
-<title>Страница о червях</title> 
+b {text-decoration: overline; font-family: cursive;}
+q {color: #000080;
+  font-size: 1em;}     
+<title>Страница о червях</title>
 </style>
 </head> 
 <body> 
 <table border="1" cellpadding="0" cellspacing="0" width="100%"> 
 <tr> 
-<th colspan=2>Таблица о червях</th> 
+<th colspan=2><q>Таблица о червях</q></th> 
 </tr> 
 <tr> 
-<th width="30%">Дополнительная информация о червях</th> 
-<th width="70%">Главная информация о червях</th> 
+<th width="30%"><q>Дополнительная информация о червях</q></th> 
+<th width="70%"><q>Главная информация о червях</q></th> 
 </tr> 
 <tr> 
 <td width="20%">
