--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <style>
-table {background: url(gaga.png) repeat purple;
+table {background: url(gaga.jpg) repeat purple;
 background-size: cover;
 }
 h1{color: #a52a2a;
