--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ h1{color: #a52a2a;
 font-size: 1em;
 border-bottom-style: solid;}
 p {text-shadow: 1px 3px 2px black, 0 0 1em blue;
-   color: yellow; font-family: Arial, serif; font-size: 200%;}
-   p:first-letter {font-family: "Times New Roman", sans-serif; font-size: 200%; color: blue;}
+   color: yellow; font-family: Arial, serif; font-size: 0.9em;}
+   p:first-letter {font-family: "Times New Roman", Times, serif; font-size: 2em; color: blue;}
 u {text-shadow: 1px 1px 1px black, 0 0 1em pink;
    color: green;
   font-size: 1em;}
